--- a/.github/workflows/gem-test.yml
+++ b/.github/workflows/gem-test.yml
@@ -1,4 +1,4 @@
-name: gem-tests
+name: Run tests
 
 on:
   push:
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Ruby 2.7.1
       uses: actions/setup-ruby@v1
       with:
-        version: 2.7.1
+        ruby-version: 2.7.1
     - name: Run tests
       run: |
         bundle install
