Try to fix by removing the assigning of the env variable

--- a/.github/workflows/gem-test.yml
+++ b/.github/workflows/gem-test.yml
@@ -24,4 +24,4 @@ jobs:
     - name: Upload report
       run: |
         mv ./coverage/coverage.xml cobertura.xml
-        CODACY_PROJECT_TOKEN=${CODACY_PROJECT_TOKEN} bash <(curl -Ls https://coverage.codacy.com/get.sh) report
+        bash <(curl -Ls https://coverage.codacy.com/get.sh) report
