--- a/.github/workflows/gem-test.yml
+++ b/.github/workflows/gem-test.yml
@@ -25,3 +25,5 @@ jobs:
       run: |
         mv ./coverage/coverage.xml cobertura.xml
         bash <(curl -Ls https://coverage.codacy.com/get.sh) report
+      env:
+        CODACY_PROJECT_TOKEN: ${{secrets.CODACY_PROJECT_TOKEN}}
