--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,10 @@
 /pkg/
 /spec/reports/
 /tmp/
+/node_modules/
 
 # rspec failure tracking
 .rspec_status
 .DS_Store
+package.json
+package-lock.json
