Add rubocop from qa-tools YWEB-0

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,11 @@
-Metrics/BlockLength:
-  Exclude:
-    - "spec/**/*_spec.rb"
+inherit_from:
+  - https://raw.githubusercontent.com/yousty/qa-tools/master/rubocop/base/.rubocop.yml # common enabled rules
+  - https://raw.githubusercontent.com/yousty/qa-tools/master/rubocop/base/.rubocop.disabled.yml # common disabled rules
+  - .rubocop.disabled.yml # project specific disabled rules
 
-Metrics/ModuleLength:
-  Exclude:
-    - "spec/**/*_spec.rb"
+# project specific overwritten rules
+
+# example:
+# Layout/LineLength:
+# Max: 100
+# AllowHeredoc: true
