--- a/.github/workflows/gem-test.yml
+++ b/.github/workflows/gem-test.yml
@@ -25,9 +25,9 @@ jobs:
       run: |
         bundle install
         CI=true bundle exec rspec
-    - name: Upload report
-      run: |
-        mv ./coverage/coverage.xml cobertura.xml
-        bash <(curl -Ls https://coverage.codacy.com/get.sh) report
-      env:
-        CODACY_PROJECT_TOKEN: ${{secrets.CODACY_PROJECT_TOKEN}}
+    # - name: Upload report
+    #   run: |
+    #     mv ./coverage/coverage.xml cobertura.xml
+    #     bash <(curl -Ls https://coverage.codacy.com/get.sh) report
+    #   env:
+    #     CODACY_PROJECT_TOKEN: ${{secrets.CODACY_PROJECT_TOKEN}}
